tests/syntax_errors/sasha76_2.tl
-- test case 76.
-- Description : while cycle. Break cannot be without a cycle

-- Expected : '2'
require "ifj21" 
function main() 
   break        
end             

